# project1_galimova_karina_m25555

./: .gitignore  README.md  demo.cast  labyrint.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
