[tool.poetry]
name = "project1-galimova-karina-m25555"
version = "0.1.0"
description = ""
authors = ["Karina Galimova <you@example.com>"]


packages = [
     { include = "labyrinth_game" },
]
 
[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
