[tool.poetry]
name = "project1-galimova-karina-m25555"
version = "0.1.0"
description = ""
authors = ["Karina Galimova <you@example.com>"]


packages = [
     { include = "labyrinth_game" },
]
 
[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.6,<0.15.0)"
]
