[tool.poetry]
name = "project1-galimova-karina-m25555"
version = "0.1.0"
description = "Консольная текстовая игра Лабиринт сокровищ"
authors = ["Karina Galimova <karina.galimova.98@mail.ru>"]
readme = "README.md"


packages = [
     { include = "labyrinth_game" },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
 
[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


